--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with(model: article, local: true) do |form| %>
+  <%= form.hidden_field :tenant_id, value: @author.id %>
+
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
